--- a/src/template.html
+++ b/src/template.html
@@ -6,13 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title><%= htmlWebpackPlugin.options.title %></title>
 
 </head>
 
 <body>
-
-  <div id="root"></div>
 
 </body>
 
